creating general helper to forward message through websocket